aula botao verde

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <button onclick="abir();" style="background: green];">Clique Aqui</button>
     <script>
-            function{
-                aler]("Alo, eu sou ruim")
+            function abrir(){
+                alert]("Alo, eu sou ruim")
             }
     </script>
 </body>
